--- a/index.html
+++ b/index.html
@@ -1,30 +1,168 @@
 <!DOCTYPE html>
-	<html lang="en" dir="ltr">
-	<head>
-	<meta charset="utf-8">
-	<title></title>
-	</head>
-	<body>
-	<h3>My Contact data</h3>
+<html lang="en" dir="ltr">
 
-	<ul>
-	<li>tel: 0176719790222</li>
-	<li>email:massi.mostamandy@gmx.de</li>
-	<li>adress:Sesamstraße 3,30158 Lolingen</li>
-	</ul>
-	<hr size=6>
-	<form class="" action="mailto:massi.mostamandy@gmail.com" method="post" enctype="text/plain">
+<head>
+  <meta charset="utf-8">
+  <title>Massis Personal Webpage amk</title>
+</head>
 
-	<label>Dein Name:</label>
-	<input type="text" ><br>
-	<label>Deine Schwanzlänge:</label>
-	<input type="text" ><br>
-	<label>Deine Email:</label>
-	<input type="email" name="DeineEmail"><br>
-	<label>Deine Nachricht</label><br>
-	<textarea name="DeinText" rows="10" cols="30"></textarea>
-	<input type="submit"><br>
+<body>
+  <h1>Massi Mostamandy</h1>
+  <br>
+<table>
+  <td><img src="massi.JPG" width="100" height="150"></td>
+  <td><p><em>Arbeitslos mit einem Masterabschluss aber <strong><a href="https://de.pornhub.com/">ambitioniert reich zu werden</a></strong></em></p>
+  <p>Mein Name ist Massi Mostamandy. Ich habe meinen Masteraschluss in Wiwi im Jahr
+    2020 gemacht und seit jeher bin ich auf der Suche nach einem Weg viel Geld zu machen</p></td>
+</table>
 
-	</form>
-	</body>
-	</html>
+  <hr>
+  <h3>Books I read</h3>
+  <ul>
+    <li>Rich Dad Poor Dad</li>
+    <li>Think and Grow Rich</li>
+    <li>Becoming Superhuman</li>
+    <li>and lot more</li>
+  </ul>
+  <h3><a href="hobbies.html">My Hobbies</a></h3>
+
+  <br>
+
+
+  <h3><a href="contact.html">Contact</a></h3>
+
+  <h1>Work Experience</h1>
+  <br>
+  <table>
+    <thead>
+      <tr>
+        <td><strong>Datum</strong></td>
+        <td><strong>Unternehmen</strong></td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2020-2021</td>
+        <td>Umsetzungschampions GmbH</td>
+      </tr>
+
+      <tr>
+        <td>2021-2022</td>
+        <td>Aliianz Beratungs-und Vertriebs AG</td>
+      </tr>
+    </tbody>
+
+  </table>
+
+<br>
+
+<h1>Fähigkeiten</h1>
+<br>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Massis Personal Webpage amk</title>
+</head>
+
+<body>
+  <h1>Massi Mostamandy</h1>
+  <br>
+<table>
+  <td><img src="massi.JPG" width="100" height="150"></td>
+  <td><p><em>Arbeitslos mit einem Masterabschluss aber <strong><a href="https://de.pornhub.com/">ambitioniert reich zu werden</a></strong></em></p>
+  <p>Mein Name ist Massi Mostamandy. Ich habe meinen Masteraschluss in Wiwi im Jahr
+    2020 gemacht und seit jeher bin ich auf der Suche nach einem Weg viel Geld zu machen</p></td>
+</table>
+
+  <hr>
+  <h3>Books I read</h3>
+  <ul>
+    <li>Rich Dad Poor Dad</li>
+    <li>Think and Grow Rich</li>
+    <li>Becoming Superhuman</li>
+    <li>and lot more</li>
+  </ul>
+  <h3><a href="hobbies.html">My Hobbies</a></h3>
+
+  <br>
+
+
+  <h3><a href="contact.html">Contact</a></h3>
+
+  <h1>Work Experience</h1>
+  <br>
+  <table>
+    <thead>
+      <tr>
+        <td><strong>Datum</strong></td>
+        <td><strong>Unternehmen</strong></td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2020-2021</td>
+        <td>Umsetzungschampions GmbH</td>
+      </tr>
+
+      <tr>
+        <td>2021-2022</td>
+        <td>Aliianz Beratungs-und Vertriebs AG</td>
+      </tr>
+    </tbody>
+
+  </table>
+
+<br>
+
+<h1>Fähigkeiten</h1>
+<br>
+<table>
+  <tr>
+    <td>
+      <table>
+        <tr>
+          <td>doggystyle</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+
+        <tr>
+          <td>69</td>
+          <td>⭐⭐⭐⭐⭐</td></td>
+        </tr>
+      </table>
+
+      <td>
+
+        <table>
+          <tr>
+            <td>Missionar</td>
+            <td>⭐⭐⭐⭐⭐</td>
+
+            <tr>
+              <td>Tricking</td>
+              <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+          </tr>
+        </table>
+      </td>
+
+
+
+
+  </tr>
+</table>
+
+</body>
+
+
+
+</html>
+
+</body>
+
+
+
+</html>
