--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Massis Personal Webpage amk</title>
 </head>
 
-<body>
+<body style = " background-color: pink; ">
   <h1>Massi Mostamandy</h1>
   <br>
 <table>
