--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style = " background-color: pink; ">
   <h1>Massi Mostamandy</h1>
   <br>
-<table>
+<table style = " background-color: blue; ">
   <td><img src="massi.JPG" width="100" height="150"></td>
   <td><p><em>Arbeitslos mit einem Masterabschluss aber <strong><a href="https://de.pornhub.com/">ambitioniert reich zu werden</a></strong></em></p>
   <p>Mein Name ist Massi Mostamandy. Ich habe meinen Masteraschluss in Wiwi im Jahr
