--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <title>Massis Personal Webpage amk</title>
 </head>
 
-<body style = " background-color: pink; ">
+<style media="screen">
+  body {
+      " background-color: #D2691E; "
+  }
+</style>
+
+<body>
   <h1>Massi Mostamandy</h1>
   <br>
 <table style = " background-color: blue; ">
@@ -91,6 +97,81 @@
 
 
   <h3><a href="contact.html">Contact</a></h3>
+
+  <h1>Work Experience</h1>
+  <br>
+  <table>
+    <thead>
+      <tr>
+        <td><strong>Datum</strong></td>
+        <td><strong>Unternehmen</strong></td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2020-2021</td>
+        <td>Umsetzungschampions GmbH</td>
+      </tr>
+
+      <tr>
+        <td>2021-2022</td>
+        <td>Aliianz Beratungs-und Vertriebs AG</td>
+      </tr>
+    </tbody>
+
+  </table>
+
+<br>
+
+<h1>Fähigkeiten</h1>
+<br>
+<table>
+  <tr>
+    <td>
+      <table>
+        <tr>
+          <td>doggystyle</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+
+        <tr>
+          <td>69</td>
+          <td>⭐⭐⭐⭐⭐</td></td>
+        </tr>
+      </table>
+
+      <td>
+
+        <table>
+          <tr>
+            <td>Missionar</td>
+            <td>⭐⭐⭐⭐⭐</td>
+
+            <tr>
+              <td>Tricking</td>
+              <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+          </tr>
+        </table>
+      </td>
+
+
+
+
+  </tr>
+</table>
+
+</body>
+
+
+
+</html>
+
+</body>
+
+
+
+</html>
 
   <h1>Work Experience</h1>
   <br>
