--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Massis Personal Webpage amk</title>
 </head>
 
-<style media="screen">
+<style>
   body {
-      " background-color: #D2691E; "
+    background-color: #D2691E;
   }
 </style>
 
