--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 </head>
 
 <style>
-  body {
-    background-color: #D2691E;
+ body {
+    background-color: #EAF6F6;
   }
+    hr{
+      border-color: grey;
+        border-style: none;
+    border-top-style: dotted;
+    border-height: 0px;
+    border-width: 20px;
+    width: 20%;
+  }
+
 </style>
 
 <body>
